--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ nav{
     display: none;
 }
 
-@media screen and (max-width: 500px){
+@media (max-width: 500px){
     .nav-list{
         display: none;
     }
