--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,27 @@ nav{
     width: 100%;
     height: 100%;
 }
+
+/* buttons to track which photo */
+
+.trackerHolder{
+    position: absolute;
+    bottom: 10px;
+    padding:10px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index:200;
+}
+
+.circle{
+    height: 20px;
+    aspect-ratio: 1/1;
+    background-color: white;
+    border-radius: 50%;
+}
